# aoc-2024-cpp

.github/workflows/: build.yml
day01/: CMakeLists.txt  main  main.cpp
day02/: CMakeLists.txt
day02/include/: report.h  report_checker.h  report_parser.h  solver.h
day02/src/: main.cpp  report.cpp  report_checker.cpp  report_parser.cpp  solver.cpp
day02/test/: report_parser_test.cpp  report_test.cpp  solver_test.cpp
day02/test/end-to-end/: solver_test.cpp
day02/test/integration/: solver_test.cpp
day02/test/unit/: report_checker_test.cpp  report_test.cpp  solver_test.cpp
